src/test/resources/core/ill-typed/undefined-function.stella
language core;

fn main(n : Nat) -> Bool {
  return if miss(n) then true else false;
}